--- a/myapp/package.json
+++ b/myapp/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Mackhack0705.github.io/Travel-Website",
+  "homepage": "https://github.com/Mackhack0705/Travel-Website",
   "name": "myapp",
   "version": "0.1.0",
   "private": true,
